# Chess

./: .clang-format  .gitignore  CMakeLists.txt
include/: ai.h  board.h  board_utils.h  cli.h  color.h  figure.h  figure_type.h  move.h  move_status.h  player.h
src/: cli.cpp  main.cpp
src/engine/: ai.cpp  board.cpp  board_utils.cpp  figure.cpp  move.cpp  player.cpp
uml/: chess-abstract.puml  chess.puml
